# bevy_ios_gamecenter

./: .gitignore  CHANGELOG.md  Makefile  Package.swift  README.md  justfile
.github/workflows/: cd.yml  ci.yml
BevyIosGamecenterRust.xcframework/: .gitignore  Info.plist
BevyIosGamecenterRust.xcframework/ios-arm64/Headers/BevyIosGamecenterRust/: bevy_ios_gamecenter.h
BevyIosGamecenterRust.xcframework/ios-arm64_x86_64-simulator/Headers/BevyIosGamecenterRust/: bevy_ios_gamecenter.h  module.modulemap
Sources/bevy_ios_gamecenter/: BevyIosGamecenter.swift  bevy_ios_gamecenter.swift
Tests/bevy_ios_gamecenterTests/: bevy_ios_gamecenterTests.swift
bevy_ios_gamecenter_egui/: Cargo.toml  README.md
bevy_ios_gamecenter_egui/src/: lib.rs
crate/: Cargo.toml  build-rust-release.sh  build-rust.sh  build.rs
crate/src/: lib.rs  methods.rs  native.rs  plugin.rs  request.rs
