[package]
name = "bevy_ios_gamecenter"
version = "0.1.6"
edition = "2021"
build = "build.rs"
readme = "../README.md"
license = "MIT"
authors = ["extrawurst <mail@rusticorn.com>"]
documentation = "https://docs.rs/bevy_ios_gamecenter"
repository = "https://github.com/rustunit/bevy_ios_gamecenter"
keywords = ["bevy", "gamedev", "mobile", "ios", "swift"]
description = "Bevy Plugin and Swift Package to provide access to iOS native GameKit (Gamecenter) from inside Bevy Apps"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
bevy_app = { version = "0.13", default-features = false }
bevy_ecs = { version = "0.13", default-features = false }
bevy_ecs_macros = { version = "0.13", default-features = false }
bevy_log = { version = "0.13", default-features = false }
swift-bridge = "0.1"
bevy_crossbeam_event = "0.5"
base64 = "0.22"

[build-dependencies]
swift-bridge-build = "0.1"
